hphp/hack/test/typecheck/new_switch_exhaustivity/enum.bad.php.exp
ERROR: File "enum.bad.php", line 14, characters 3-48:
This `switch` statement is nonexhaustive. At least the following cases are missing: `E::B` (Typing[4019])
  File "enum.bad.php", line 14, characters 11-12:
  The scrutinee has type `E`.
ERROR: File "enum.bad.php", line 21, characters 3-77:
This `switch` statement is nonexhaustive. At least the following cases are missing: `E::A`, `E::B` (Typing[4019])
  File "enum.bad.php", line 21, characters 11-12:
  The scrutinee has type `E`.
